themes/main/src/sass/national.scss
/* ... */
#home .adsense-01-desktop {
  display: none;
  width: 100%;
  -webkit-order: -6; //Old Safari
  order: -6;

  @include media-query(FIVE) {
    display: flex;
    justify-content: center;
    margin-bottom: 10px;
    @include column-lateral-spacing();
  }
}

#home .adsense-02-desktop {
  display: none;

  @include media-query(THREE) {
    display: flex;
    justify-content: center;
    display: block;
  }
}

#home .adsense-03-desktop {
  display: none;

  @include media-query(FOUR) {
    @include column-lateral-spacing();

    display: block;
  }
}

#home .adsense-03-mobile {
  display: block;
  margin-bottom: 10px;

  @include media-query(THREE) {
    display: none;
  }

  @media (max-width: 340px) {
    display: none;
  }
}

#home .featured-big-picture {
  width: 100%;
  @include picture-with-caption();
  @include image-rounded-responsive(300px);

  @include media-query(THREE) {
    width: 2 * $COLUMN-WIDTH;
    @include column-lateral-spacing();
  }
}

#home .featured-small-picture {
  display: -webkit-flex; //Old Safari
  display: flex;
  -webkit-flex-direction: row-reverse; //Old Safari
  flex-direction: row-reverse;
  @include image-rounded(150px, 150px);

  @include media-query(THREE) {
    width: $COLUMN-WIDTH;
    -webkit-flex-direction: column-reverse; //Old Safari
    flex-direction: column-reverse;
    -webkit-align-self: flex-start; //Old Safari
    align-self: flex-start;
    @include image-rounded(220px, 150px);
    @include column-lateral-spacing();
  }

  figure {
    -webkit-flex-shrink: 0; //Old Safari
    flex-shrink: 0;
  }

  .title {
    -webkit-flex-shrink: 1; //Old Safari
    flex-shrink: 1;
    padding: 0 10px;
  }

  @include media-query(THREE) {
    .title {
      border-left: 3px solid $vertical-bar;
      padding-left: 10px;
      margin-top: $VERTICAL-SPACE;
    }
  }

  a {
    display: -webkit-flex; //Old Safari
    display: flex;
    -webkit-flex-direction: row; //Old Safari
    flex-direction: row;
    @include media-query(THREE) {
      -webkit-flex-direction: column; //Old Safari
      flex-direction: column;
      -webkit-align-self: flex-start; //Old Safari
      align-self: flex-start;
    }
  }
}

#home .featured-text-and-title{
  width: 100%;

  @include media-query(THREE) {
    width: 2 * $COLUMN-WIDTH;
    @include column-lateral-spacing();
  }

  .title {
    border-left: 3px solid $vertical-bar;
    padding-left: 10px;
    margin-top: $VERTICAL-SPACE;
  }

  .description {
    padding-left: 13px;
    margin-top: 5px;
  }
}

#home .box-container {
  display: -webkit-flex; //Old Safari
  display: flex;
  width: 100%;

  @include media-query(THREE){
    width: $COLUMN-WIDTH;
    @include column-lateral-spacing();
  }

  .featured-text-box {
    width: 100%;
    background-color: $box-background;
    border-top: 3px solid $box-border;
    padding: 10px;
  }
}

#home .article-footer {
  width: 50%;
  @include image-rounded(100%, 150px);

  @include media-query (THREE){
    width: $COLUMN-WIDTH;
    @include column-lateral-spacing();
  }

  .title {
    border-left: 3px solid $vertical-bar;
    padding-left: 10px;
    margin-top: $VERTICAL-SPACE;
  }

  .hat{
    @include section-name();
  }

  img{
    border-radius: 5px;
    width: 100%;
  }
}

.article-footer + .article-footer {
  padding-left: 10px;
}

#home .gallery-videos {
  iframe, img, a{
    height: 263px;
    width: 100%;

    @include media-query(THREE){
      height: 337px;
    }
  }
}

#home .gallery-images, .gallery-videos{
  width: 2 * $COLUMN_WIDTH;

  .section-name {
    @include section-name();
  }

  @include media-query(THREE) {
    @include column-lateral-spacing();
  }
}

#home .photo-caption {
  width: 100%;

  @include media-query(FIVE){
    width: 2 * $COLUMN-WIDTH;
  }

  .charge_mobile {

      @include media-query(THREE) {
        display: none;
      }
  }

  .charge_desktop {
    display: none;

    @include media-query(THREE) {
      display: block;
    }
  }

  .image_charge_mobile {
   width: 100%;
   max-width: 2 * $COLUMN-WIDTH;
  }

  figure.charge_desktop {
    background-repeat: no-repeat;
    background-position: top center;
    background-size: contain;
    border-radius: 5px;
    height: 300px;
    width: 100%;

    @include media-query(THREE) {
      height: 300px;
      width: 2 * $COLUMN-WIDTH;
    }

    @include media-query(FOUR) {
      height: 450px;
      width: 3 * $COLUMN-WIDTH;
    }

    @include media-query(FIVE){
      height: 300px;
      width: 2 * $COLUMN-WIDTH;
    }
  }

  .section-name {
    @include section-name();
  }

  @include media-query(THREE) {
    @include column-lateral-spacing();
  }


}

#home .most-read, .last-news#last-news-mobile {
  width: 100%;
  @include column-lateral-spacing();

  .section-name {
    @include section-name();
  }

  ol {
    counter-reset: li;
    margin: 15px 0 0 35px;
  }

  ol > li {
    list-style: none;
    margin-bottom: 5px;

    .title {
      display: inline;
    }
  }

  ol > li:before{
    content: counter(li) ".";
    counter-increment: li;
    margin: 0 10px 0 -30px;
  }
}

#home .last-news#last-news-mobile {
  @include media-query(THREE) {
    display: none;
  }
}

#home .last-news#last-news-dynamic {
  display: none;

  @include media-query(THREE) {
    display: -webkit-flex; //Old Safari
    display: flex;
    width: 100%;
    padding : 5px 0;
    @include column-lateral-spacing();

    .section-name {
      white-space: nowrap;
    }

    ol > li {
      list-style: none;
      padding-left: 10px;
    }

    .inactive {
      display: none;
    }
  }
}


#home .sidebar {
  display: none;

  @include media-query(THREE) {
    display: inline-block;
    width: $COLUMN-WIDTH;
    @include column-lateral-spacing();
  }

  section + section {
    margin-top: $VERTICAL-SPACE;
  }
}

#home figure.radar {
  margin-top: $VERTICAL-SPACE;

  img {
    width: 100%;
  }

  @include media-query(THREE) {
    margin-top: 0;
  }
}
/* ... */

